# advent-of-code

./: .gitignore  README.md  basesolver.py  generate_empty_solvers.py  main.py  pyproject.toml  requirements.txt  settings.py  solver.py
advent_of_code/: __init__.py  basesolver.py
advent_of_code/2019/01/: y2019d01.py
advent_of_code/2019/02/: y2019d02.py
advent_of_code/2019/03/: y2019d03.py
advent_of_code/2019/04/: y2019d04.py
advent_of_code/2019/05/: y2019d05.py
advent_of_code/2019/06/: y2019d06.py
advent_of_code/2019/07/: y2019d07.py
advent_of_code/2019/08/: y2019d08.py
advent_of_code/2019/09/: y2019d09.py
advent_of_code/2019/10/: y2019d10.py
advent_of_code/2019/11/: y2019d11.py
advent_of_code/2019/12/: y2019d12.py
advent_of_code/2019/13/: y2019d13.py
advent_of_code/2019/14/: y2019d14.py
advent_of_code/2019/15/: y2019d15.py
advent_of_code/2019/16/: y2019d16.py
advent_of_code/2019/17/: y2019d17.py
advent_of_code/2019/18/: y2019d18.py
data/aocd/: token2id.json
data/aoctd/: 2021_15_2_input.txt
solvers/: y2018d01.py  y2018d02.py  y2018d03.py  y2018d04.py  y2018d05.py  y2018d06.py  y2018d07.py  y2018d08.py  y2018d09.py  y2018d10.py  y2018d11.py  y2018d12.py  y2018d13.py  y2018d14.py  y2018d15.py  y2018d16.py  y2018d17.py  y2018d18.py  y2018d19.py  y2018d20.py  y2018d21.py  y2018d22.py  y2018d23.py  y2018d24.py  y2018d25.py  y2019d01.py  y2019d02.py  y2019d03.py  y2019d04.py  y2019d05.py  y2019d06.py  y2019d07.py  y2019d08.py  y2019d09.py  y2019d10.py  y2019d11.py  y2019d12.py  y2019d13.py  y2019d14.py  y2019d15.py  (+84 more)
(+82 files in other folders)
