[tool.poetry]
name = "advent-of-code"
version = "2022"
description = "Solutions for Advent of Code challenges"
authors = ["Toni Sredanović <toni.sredanovic@gmail.com>"]
readme = "README.md"
homepage = "https://tsredanovic.github.io/"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.12.0"
isort = "^5.10.1"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
